# mser_picture

./: CMakeLists.txt  README.md  main.cpp
include/: Image.h  Pixel.h  Point.h
src/: Image.cpp  Pixel.cpp  Point.cpp
